base/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nginx
spec:
  hosts:
    - "ktor.test"
  gateways:
    - nginx-gateway
  http:
    - route:
        - destination:
            host: nginx
            subset: v1
          weight: 90
        - destination:
            host: nginx
            subset: v2
          weight: 10
